--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ flutter:
     - assets/grass.riv
     - assets/marty_v6.riv
     - assets/marty_transparent.riv
+    - assets/planet.riv
     - assets/star.riv
     - assets/wave.riv
 
