--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ flutter:
     - assets/marty_transparent.riv
     - assets/planet.riv
     - assets/star.riv
+    - assets/star_close.riv
     - assets/wave.riv
 
   # An image asset can refer to one or more resolution-specific "variants", see
