--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/cloud.riv
     - assets/fire.riv
     - assets/grass.riv
     - assets/marty_v6.riv
